# Trennungsgeld

./: .gitignore  README.md  pyproject.toml
tests/: test_calculator.py  test_gui.py  test_simple_cli.py
trennungsgeld/: __init__.py  __main__.py  calculator.py  cli.py  gui.py  simple_cli.py
