[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trennungsgeld"
version = "0.1.0"
description = "Rechner für Trennungsgeld auf Bundesebene inklusive Reisekosten"
readme = "README.md"
authors = [{name = "Bundesrechner", email = "example@example.com"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
trennungsgeld = "trennungsgeld.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
